--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" >
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Title</title>
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css} "/>
     <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
     <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-
 </head>
 <body>
-<nav th:insert="fragments/navigationbar :: nav_fragment"></nav>
-    Home
-<footer th:insert="fragments/footer :: footer_fragment"></footer>
+<footer th:fragment="footer_fragment" class="py-5 bg-dark">
+    <p class="m-0 text-center text-white"> Copyright &copy; by Ashajo 2021</p>
+</footer>
 
 </body>
 </html>
