--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Index Page</title>
-</head>
-Index Page
-<body>
+    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css} "/>
+    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 
+</head>
+<body>
+<nav th:insert="fragments/navbar :: nav_fragment" ></nav>
+
+<div class="container p-3 my-3 bg-primary text-white">
+    Index Page
+</div>
+
+
+<footer th:insert="fragments/footer :: footer_fragment" ></footer>
 </body>
 </html>
