--- a/src/main/resources/templates/fragments/navigationbar.html
+++ b/src/main/resources/templates/fragments/navigationbar.html
@@ -17,7 +17,7 @@
                 <a class="nav-link" th:href="@{/}">Index</a>
             </li>
         <li class="nav-item">
-            <a class="nav-link" th:href="@{Home}">Home</a>
+            <a class="nav-link" th:href="@{/home}">Home</a>
         </li>
         </ul>
 </nav>
